<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BUc-j9-0t3">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Alpha-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="wRF-Pv-IBn">
                                <rect key="frame" x="20" y="108" width="374" height="304"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZYr-0D-tRb">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="jl1-wv-yB2"/>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="OB5-Jj-pQ5"/>
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0o3-dN-b4E">
                                        <rect key="frame" x="0.0" y="54" width="374" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TextCopy"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Frd-eZ-4JE">
                                        <rect key="frame" x="-2" y="108" width="378" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Completion"/>
                                        <connections>
                                            <action selector="sliderChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="4eb-Km-lLv"/>
                                        </connections>
                                    </slider>
                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="4oT-yo-9pF">
                                        <rect key="frame" x="0.0" y="162" width="374" height="34"/>
                                    </progressView>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="exn-Y2-a0e">
                                        <rect key="frame" x="0.0" y="216" width="374" height="35"/>
                                        <segments>
                                            <segment title="Alpha"/>
                                            <segment title="Omega"/>
                                        </segments>
                                        <connections>
                                            <action selector="segmentChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="n2A-hi-axb"/>
                                        </connections>
                                    </segmentedControl>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9xH-yx-PJE">
                                        <rect key="frame" x="0.0" y="270" width="374" height="34"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2OE-rv-xop">
                                                <rect key="frame" x="0.0" y="0.0" width="124.5" height="34"/>
                                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                                <state key="normal" title="Red">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="colorSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rjs-Cl-Lgf"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UIp-zT-M9X">
                                                <rect key="frame" x="124.5" y="0.0" width="125" height="34"/>
                                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                                <state key="normal" title="Green">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="colorSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gTR-FU-SV0"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ggf-Sx-6fI">
                                                <rect key="frame" x="249.5" y="0.0" width="124.5" height="34"/>
                                                <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="15"/>
                                                <state key="normal" title="Blue">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="colorSelected:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yo6-xi-9jC"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wRF-Pv-IBn" secondAttribute="bottom" id="POY-SI-USi"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wRF-Pv-IBn" secondAttribute="trailing" constant="20" id="gxa-12-McI"/>
                            <constraint firstItem="wRF-Pv-IBn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="h1U-Fh-CZS"/>
                            <constraint firstItem="wRF-Pv-IBn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="sId-hr-L6w"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Alpha" id="rog-ly-zd7"/>
                    <connections>
                        <outlet property="label" destination="0o3-dN-b4E" id="aQt-gX-g64"/>
                        <outlet property="progressView" destination="4oT-yo-9pF" id="wFP-0Q-r8S"/>
                        <outlet property="segmentedControl" destination="exn-Y2-a0e" id="NQG-nS-wDv"/>
                        <outlet property="slider" destination="Frd-eZ-4JE" id="0RE-Wd-Za6"/>
                        <outlet property="textField" destination="ZYr-0D-tRb" id="w60-E6-iLz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1047.8260869565217" y="140.625"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="eMs-p9-mfP">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BUc-j9-0t3" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GnV-H7-jLr">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="B7U-qa-XJc"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ScQ-jN-ykh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="140.625"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
