...
}

- (IBAction)colorSelected:(UIButton *)sender {
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:sender.titleLabel.text
                                                                   message:nil
                                                            preferredStyle:UIAlertControllerStyleAlert];
    [alert addAction:[UIAlertAction actionWithTitle:@"OK"
                                              style:UIAlertActionStyleDefault
                                            handler:nil]];
    [self presentViewController:alert animated:YES completion:nil];
}

- (BOOL)textFieldShouldReturn:(UITextField *)textField {
...
